--- a/AdminMainWindow.ui
+++ b/AdminMainWindow.ui
@@ -291,7 +291,7 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="page_1">
      <widget class="QFrame" name="frameFilter">
@@ -395,6 +395,26 @@
          <x>320</x>
          <y>70</y>
          <width>42</width>
+         <height>25</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>30</y>
+         <width>81</width>
+         <height>25</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_2">
+       <property name="geometry">
+        <rect>
+         <x>280</x>
+         <y>30</y>
+         <width>91</width>
          <height>25</height>
         </rect>
        </property>
@@ -980,6 +1000,16 @@
          <string>总航班数：</string>
         </property>
        </widget>
+       <widget class="QLineEdit" name="lineEdit_3">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>60</y>
+          <width>113</width>
+          <height>25</height>
+         </rect>
+        </property>
+       </widget>
       </widget>
      </widget>
      <widget class="QWidget" name="widget_3" native="true">
@@ -1026,6 +1056,16 @@
         </property>
         <property name="text">
          <string>总订单数：</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_4">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>60</y>
+          <width>113</width>
+          <height>25</height>
+         </rect>
         </property>
        </widget>
       </widget>
@@ -1076,6 +1116,16 @@
          <string>总用户数：</string>
         </property>
        </widget>
+       <widget class="QLineEdit" name="lineEdit_5">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>70</y>
+          <width>113</width>
+          <height>25</height>
+         </rect>
+        </property>
+       </widget>
       </widget>
      </widget>
      <widget class="QWidget" name="widget_5" native="true">
@@ -1122,6 +1172,16 @@
         </property>
         <property name="text">
          <string>订单总金额：</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_6">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>70</y>
+          <width>113</width>
+          <height>25</height>
+         </rect>
         </property>
        </widget>
       </widget>
